got it working and refactored

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header>
-    <h1>Conway's Game of Life 5</h1>
+    <h1>Conway's Game of Life in Typescript</h1>
   </header>
   <main>
     <div id="root"></div>
