added help page

--- a/built/help.html
+++ b/built/help.html
@@ -7,7 +7,7 @@
   <title>Conway's Game of Life - Gene Hyde</title>
   <link rel="stylesheet" href="styles.css" type="text/css" media="all">
   
-  <script type="module" src="index.js" defer></script>
+  <!-- <script type="module" src="index.js" defer></script> -->
 
   <!-- <style>
     td.cell {
@@ -21,9 +21,10 @@
     <h1>Conway's Game of Life in Typescript</h1>
   </header>
   <main>
-    <div id="root"></div>
+    <p>
+      This is the help page.
+    </p>
   </main>
-  <a href="/golts/help.html">Help</a>
 </body>
 
 </html>
