--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
   
   <script type="module" src="index.js" defer></script>
 
-  <style>
+  <!-- <style>
     td.cell {
       border: 1px solid lightgrey;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
@@ -23,6 +23,7 @@
   <main>
     <div id="root"></div>
   </main>
+  <a href="/golts/help.html">Help</a>
 </body>
 
 </html>
