--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <main>
     <div id="root"></div>
   </main>
-  <a href="/golts/help.html">Help</a>
+  <a href="help.html">Help</a>
 </body>
 
 </html>
