added information to help page and also improved formatting of list of saved boards

--- a/built/help.html
+++ b/built/help.html
@@ -10,11 +10,19 @@
 
 <body>
   <header>
-    <h1>Conway's Game of Life in Typescript</h1>
+    <h1><a href="index.html">Conway's Game of Life in Typescript</a></h1>
   </header>
   <main>
     <p>
-      This is the help page.
+      This site was created by <a href="https://www.hydeenterprises.com">Gene Hyde</a>
+      as a programming exercise to help Gene learn about Typescript,
+      HTML Canvas Elements, Azure in general and specifically Azure Static Web Apps and Azure Functions
+    </p>
+    <p>
+      Wikipedia has a page about <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway's Game of Life</a>.
+    </p>
+    <p>
+      <a href="https://playgameoflife.com/">This is another implementation that I find interesting</a>.
     </p>
   </main>
 </body>
